[project]
name = "twolens"
version = "1.0.0"
description = "Brand intelligence pipeline — media coverage vs. creator sentiment"
requires-python = ">=3.12"

# ---------------------------------------------------------------------------
# Ruff — linting & formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort (import sorting)
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "LOG",  # flake8-logging
  "RET",  # flake8-return
]
ignore = [
  "E501",   # line length handled by formatter
  "SIM108", # ternary operator — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["twolens"]

# ---------------------------------------------------------------------------
# mypy — type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
